gcp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /apiv1
            pathType: ImplementationSpecific
            backend:
              service:
                name: rest
                port:
                  number: 5000
